@@ -221,6 +221,8 @@ POSSIBILITY OF SUCH DAMAGE.
 #define TORRENT_HAS_FALLOCATE 0
 #endif
 
+#define TORRENT_USE_SYNC_FILE_RANGE 1
+
 #endif // ANDROID
 
 #if defined __GLIBC__ && ( defined __x86_64__ || defined __i386 \
@@ -479,6 +481,11 @@ POSSIBILITY OF SUCH DAMAGE.
 #ifndef TORRENT_USE_MADVISE
 #define TORRENT_USE_MADVISE 0
 #endif
+
+#ifndef TORRENT_USE_SYNC_FILE_RANGE
+#define TORRENT_USE_SYNC_FILE_RANGE 0
+#endif
+
 
 #ifndef TORRENT_COMPLETE_TYPES_REQUIRED
 #define TORRENT_COMPLETE_TYPES_REQUIRED 0
